Button alignment fix

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,7 +36,7 @@ body{
 				height: 300px;
 
 				#left{
-					width:50%;
+					width:48%;
 					float:left;
 					}
 				span{
@@ -50,7 +50,7 @@ body{
 					margin: 30px 0 0 0;
 
 					list-style:none;	
-					display:inline-block;				
+					display:block;				
 				}
 				a{
 					text-decoration:none;
@@ -66,7 +66,7 @@ body{
 				}
 				
 			#right{
-				width:50%;
+				width:48%;
 				float:right;
 				}
 				img{
